--- a/CódigoFuente/BitacorasProduccion/Web.config
+++ b/CódigoFuente/BitacorasProduccion/Web.config
@@ -29,11 +29,11 @@
       </system.Web>
   -->
   <system.web>
-	  <sessionState timeout="300" />
+	  <sessionState timeout="400" />
 	  <globalization uiCulture="es" culture="es-MX" />
 	  <compilation debug="true" targetFramework="4.5" />
     <httpRuntime maxRequestLength="20480" targetFramework="4.5" />
-    <customErrors mode="RemoteOnly">
+    <customErrors mode="On">
       <error redirect="~/Error/NotFound" statusCode="404" />
       <error redirect="~/Error/BadRequest" statusCode="400" />
     </customErrors>
