2022-01-25 Se agrega doble validación a polizas manuales

--- a/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
+++ b/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
@@ -197,6 +197,7 @@
     <Compile Include="Controllers\BomController.cs" />
     <Compile Include="Controllers\class_v3Controller.cs" />
     <Compile Include="Controllers\CombosController.cs" />
+    <Compile Include="Controllers\DemoController.cs" />
     <Compile Include="Controllers\empleadosController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -215,7 +216,9 @@
     <Compile Include="Controllers\PFA_VolumeController.cs" />
     <Compile Include="Controllers\PlantasController.cs" />
     <Compile Include="Controllers\PM_autorizadoresController.cs" />
+    <Compile Include="Controllers\PM_departamentosController.cs" />
     <Compile Include="Controllers\PM_tipo_polizaController.cs" />
+    <Compile Include="Controllers\PM_usuarios_capturistasController.cs" />
     <Compile Include="Controllers\PM_validadoresController.cs" />
     <Compile Include="Controllers\PolizaManualController.cs" />
     <Compile Include="Controllers\PremiumFreightApprovalController.cs" />
@@ -370,7 +373,19 @@
     <Compile Include="Models\PM_conceptos.cs">
       <DependentUpon>NuevoPortalModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\PM_conceptos_modelo.cs">
+      <DependentUpon>NuevoPortalModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\PM_departamentos.cs">
+      <DependentUpon>NuevoPortalModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\PM_poliza_manual_modelo.cs">
+      <DependentUpon>NuevoPortalModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\PM_tipo_poliza.cs">
+      <DependentUpon>NuevoPortalModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\PM_usuarios_capturistas.cs">
       <DependentUpon>NuevoPortalModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\PM_validadores.cs">
@@ -446,6 +461,8 @@
     <Content Include="Content\emails_plantillas\PM_confirmacion_registro.html" />
     <Content Include="Content\emails_plantillas\PM_autorizacion_controlling.html" />
     <Content Include="Content\emails_plantillas\PM_autorizacion_validador.html" />
+    <Content Include="Content\emails_plantillas\PM_envio_a_contabilidad.html" />
+    <Content Include="Content\emails_plantillas\PM_envio_a_autorizador.html" />
     <Content Include="Content\emails_plantillas\PM_rechazo.html" />
     <Content Include="Content\emails_plantillas\PM_envio_a_validador.html" />
     <Content Include="Content\emails_plantillas\PFA_solicitud_recibida.html" />
@@ -5143,6 +5160,21 @@
     <Content Include="Views\inspeccion_fallas\Inspectores.cshtml" />
     <Content Include="Views\inspeccion_fallas\CreateInspector.cshtml" />
     <Content Include="Views\inspeccion_fallas\DisableInspector.cshtml" />
+    <Content Include="Views\Demo\ListaModeloPoliza.cshtml" />
+    <Content Include="Views\Demo\Create.cshtml" />
+    <Content Include="Views\Demo\Edit.cshtml" />
+    <Content Include="Views\PM_departamentos\Create.cshtml" />
+    <Content Include="Views\PM_departamentos\Details.cshtml" />
+    <Content Include="Views\PM_departamentos\Edit.cshtml" />
+    <Content Include="Views\PM_departamentos\Index.cshtml" />
+    <Content Include="Views\PM_departamentos\Disable.cshtml" />
+    <Content Include="Views\PM_departamentos\Enable.cshtml" />
+    <Content Include="Views\PM_usuarios_capturistas\Create.cshtml" />
+    <Content Include="Views\PM_usuarios_capturistas\Details.cshtml" />
+    <Content Include="Views\PM_usuarios_capturistas\Disable.cshtml" />
+    <Content Include="Views\PM_usuarios_capturistas\Edit.cshtml" />
+    <Content Include="Views\PM_usuarios_capturistas\Enable.cshtml" />
+    <Content Include="Views\PM_usuarios_capturistas\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
