--- a/CódigoFuente/Bitacoras/Clases.csproj
+++ b/CódigoFuente/Bitacoras/Clases.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\MensajesSweetAlert.cs" />
     <Compile Include="Util\NotificacionesCorreo.cs" />
+    <Compile Include="Util\OT_nivel_urgencia.cs" />
     <Compile Include="Util\OT_Status.cs" />
     <Compile Include="Util\PFA_Status.cs" />
     <Compile Include="Util\PM_Status.cs" />
