2022-03-04 Se agregan catálogos a plantilla budget

--- a/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
+++ b/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
@@ -194,7 +194,12 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AreasController.cs" />
+    <Compile Include="Controllers\BG_CentroCostoController.cs" />
+    <Compile Include="Controllers\BG_CuentasSAPController.cs" />
+    <Compile Include="Controllers\BG_MappingBridgeController.cs" />
+    <Compile Include="Controllers\BG_MappingController.cs" />
     <Compile Include="Controllers\BomController.cs" />
+    <Compile Include="Controllers\BudgetControllingController.cs" />
     <Compile Include="Controllers\class_v3Controller.cs" />
     <Compile Include="Controllers\CombosController.cs" />
     <Compile Include="Controllers\empleadosController.cs" />
@@ -3969,6 +3974,8 @@
     <Content Include="Scripts\esm\popper-utils.min.js" />
     <Content Include="Scripts\esm\popper.js" />
     <Content Include="Scripts\esm\popper.min.js" />
+    <Content Include="Scripts\Forms\BG_CentroCosto.js" />
+    <Content Include="Scripts\Forms\BG_CuestasSAP.js" />
     <Content Include="Scripts\Forms\datosEntrada.js" />
     <Content Include="Scripts\Forms\empleados.js" />
     <Content Include="Scripts\Forms\areas.js" />
@@ -5208,14 +5215,41 @@
     <Content Include="Views\OrdenesTrabajo\Create.cshtml" />
     <Content Include="Views\OrdenesTrabajo\Details.cshtml" />
     <Content Include="Views\OrdenesTrabajo\ListadoUsuario.cshtml" />
-    <Content Include="Views\ResponsableBudget\Create.cshtml" />
-    <Content Include="Views\ResponsableBudget\Delete.cshtml" />
-    <Content Include="Views\ResponsableBudget\Details.cshtml" />
-    <Content Include="Views\ResponsableBudget\Edit.cshtml" />
     <Content Include="Views\ResponsableBudget\Actual.cshtml" />
     <Content Include="Views\ResponsableBudget\DetailsActual.cshtml" />
     <Content Include="Views\ResponsableBudget\Forecast.cshtml" />
     <Content Include="Views\ResponsableBudget\EditForecast.cshtml" />
+    <Content Include="Views\BudgetControlling\Create.cshtml" />
+    <Content Include="Views\BudgetControlling\Delete.cshtml" />
+    <Content Include="Views\BudgetControlling\Details.cshtml" />
+    <Content Include="Views\BudgetControlling\Edit.cshtml" />
+    <Content Include="Views\BudgetControlling\Centros.cshtml" />
+    <Content Include="Views\BudgetControlling\DetailsCentro.cshtml" />
+    <Content Include="Views\ResponsableBudget\Budget.cshtml" />
+    <Content Include="Views\ResponsableBudget\EditBudget.cshtml" />
+    <Content Include="Views\BudgetControlling\ImportActual.cshtml" />
+    <Content Include="Views\BG_CentroCosto\Create.cshtml" />
+    <Content Include="Views\BG_CentroCosto\Details.cshtml" />
+    <Content Include="Views\BG_CentroCosto\Edit.cshtml" />
+    <Content Include="Views\BG_CentroCosto\Index.cshtml" />
+    <Content Include="Views\BG_MappingBridge\Create.cshtml" />
+    <Content Include="Views\BG_MappingBridge\Details.cshtml" />
+    <Content Include="Views\BG_MappingBridge\Edit.cshtml" />
+    <Content Include="Views\BG_MappingBridge\Index.cshtml" />
+    <Content Include="Views\BG_MappingBridge\Disable.cshtml" />
+    <Content Include="Views\BG_MappingBridge\Enable.cshtml" />
+    <Content Include="Views\BG_Mapping\Create.cshtml" />
+    <Content Include="Views\BG_Mapping\Disable.cshtml" />
+    <Content Include="Views\BG_Mapping\Details.cshtml" />
+    <Content Include="Views\BG_Mapping\Edit.cshtml" />
+    <Content Include="Views\BG_Mapping\Enable.cshtml" />
+    <Content Include="Views\BG_Mapping\Index.cshtml" />
+    <Content Include="Views\BG_CuentasSAP\Create.cshtml" />
+    <Content Include="Views\BG_CuentasSAP\Details.cshtml" />
+    <Content Include="Views\BG_CuentasSAP\Disable.cshtml" />
+    <Content Include="Views\BG_CuentasSAP\Edit.cshtml" />
+    <Content Include="Views\BG_CuentasSAP\Enable.cshtml" />
+    <Content Include="Views\BG_CuentasSAP\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
