--- a/CódigoFuente/Bitacoras/Clases.csproj
+++ b/CódigoFuente/Bitacoras/Clases.csproj
@@ -57,6 +57,7 @@
     <Compile Include="DBUtil\UsuariosDBUtil.cs" />
     <Compile Include="Models\EntradaRegistroEvento.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\BgPlantillaUtil.cs" />
     <Compile Include="Util\BG_Status.cs" />
     <Compile Include="Util\MensajesSweetAlert.cs" />
     <Compile Include="Util\Meses.cs" />
