--- a/CódigoFuente/BitacorasProduccion/Web.config
+++ b/CódigoFuente/BitacorasProduccion/Web.config
@@ -33,7 +33,7 @@
 	  <globalization uiCulture="es" culture="es-MX" />
 	  <compilation debug="true" targetFramework="4.5" />
     <httpRuntime maxRequestLength="20480" targetFramework="4.5" />
-    <customErrors mode="On">
+    <customErrors mode="RemoteOnly">
       <error redirect="~/Error/NotFound" statusCode="404" />
       <error redirect="~/Error/BadRequest" statusCode="400" />
     </customErrors>
